Fixes for footer overlapping.

--- a/resources/assets/sass/app_public.scss
+++ b/resources/assets/sass/app_public.scss
@@ -104,6 +104,12 @@ blockquote {
 
 // page specific styles
 body {
+    &.signup,
+    &.register {
+        #app {
+            padding-bottom: 0;
+        }
+    }
     &.login,
     &.signup,
     &[class^="password-reset"] {
